--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: ""
 date_format: "%Y-%m-%d"
 
 google_analytics:
-disqus_shortname:
+disqus_shortname: gothwski
 
 # Build settings
 markdown:     redcarpet
